add js Carte dans  index.html

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div class="container">
         
     </div>
+    <script src="./js/Carte.js"></script>
     <script src="./js/GameManager.js"></script>
     <script>
         var gm = new GameManager();
